tests/sumo/devices/rerouting/personTrip/errors/stops_disconnected/errors.sumo
Warning: No connection between edge 'stopA_E' and edge 'stopC_E' found.
Error: No connection found between busStop 'stopA_E' and busStop 'stopC_E' for person 'p0'.
Quitting (on error).
